Archive2/d5/ac7e46d7f50d6d/output
main.cpp: In function 'double sqrt(double)':
main.cpp:5:21: error: declaration of 'double sqrt(double)' has a different exception specifier
 double sqrt(double x) {
                     ^
In file included from /usr/include/features.h:357:0,
                 from /usr/local/include/c++/4.8.2/x86_64-unknown-linux-gnu/bits/os_defines.h:39,
                 from /usr/local/include/c++/4.8.2/x86_64-unknown-linux-gnu/bits/c++config.h:426,
                 from /usr/local/include/c++/4.8.2/iostream:38,
                 from main.cpp:1:
/usr/include/x86_64-linux-gnu/bits/mathcalls.h:158:1: error: from previous declaration 'double sqrt(double) throw ()'
 __MATHCALL (sqrt,, (_Mdouble_ __x));
 ^
main.cpp: In function 'int main(int, char**)':
main.cpp:15:16: warning: unused variable 's' [-Wunused-variable]
         double s = sqrt(-1);
                ^
